--- a/src/index.html
+++ b/src/index.html
@@ -32,18 +32,18 @@
     <div class="container-fluid border">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <h2>JEVELIN</h2>
+                <h2 class="font-italic">JEVELIN</h2>
 
                 <!-- Container wrapper -->
                 <!-- Toggle button -->
-                <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
+                <button class="navbar-toggler" type="button" data-mdb-toggle=""
                     data-mdb-target="#navbarRightAlignExample" aria-controls="navbarRightAlignExample"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-cart"></i>
                 </button>
 
                 <!-- Collapsible wrapper -->
-                <div class="collapse navbar-collapse" id="navbarRightAlignExample">
+                <div class=" navbar-collapse" id="navbarRightAlignExample">
                     <!-- Left links -->
                     <ul class="navbar-nav ms-auto pl-5 mb-3 mb-lg-0">
                         <!-- Navbar dropdown -->
@@ -206,23 +206,23 @@
     <div class="container-fluid mt-5 border border-top-0 mb-5">
         <div class="container pt-4 pb-4">
             <div class="row">
-                <div class="col-6">
+                <div class="col-md-6">
                     <img src="image/image.jpeg" alt="mobile" width="80%" height="80%">
                 </div>
-                <div class="col-6 mb-5">
+                <div class="col-md-6 mb-5">
                     <h1>Android Phone</h1>
                     <div class="row">
-                        <div class="col-2 mt-3 text-center">
+                        <div class="col-md-2 mt-3 text-center">
                             <p class="text-decoration-line-through text-secondary">$199.00 </p>
 
                         </div>
-                        <div class="col-2 mt-3 text-center">
+                        <div class="col-md-2 mt-3 text-center">
                             <h5><b>$179.00</b></h5>
                         </div>
-                        <div class="col-4 mt-3">
+                        <div class="col-md-4 mt-3">
 
                         </div>
-                        <div class="col-4 mt-3">
+                        <div class="col-md-4 mt-3">
                             <i class="fa fa-star" style='color: #f3da35'></i><i class="fa fa-star"
                                 style='color: #f3da35'></i><i class="fa fa-star" style='color: #f3da35'></i><i
                                 class="fa fa-star" style='color: #f3da35'></i><i class="fa fa-star"
@@ -236,19 +236,19 @@
                     </div>
                     <div class=" mt-3">
                         <div class="row">
-                            <div class="col-1">
+                            <div class="col-md-1">
                                 <button class="border-0 rounded-circle"><i class='fa fa-arrow-up'
                                         style='font-size:10px;padding: 15px 10px;color:gray'></i></button>
                             </div>
-                            <div class="col-1 text-center mt-2">
+                            <div class="col-md-1 text-center mt-2">
                                 <span style="margin-left: 2%;">1</span>
                             </div>
-                            <div class="col-1">
+                            <div class="col-md-1">
                                 <button class="border-0 rounded-circle"><i class='fa fa-arrow-up'
                                         style='font-size:10px;padding: 15px 10px;color:gray'></i></button>
                             </div>
-                            <div class="col-5"></div>
-                            <div class="col-4">
+                            <div class="col-md-5"></div>
+                            <div class="col-md-4">
                                 <button class="border-0 text-light  bg-primary btn-lg pt-3">
                                     <h6><i class='fa fa-shopping-cart px-3'></i>Add to cart</h6>
                                 </button>
@@ -272,13 +272,13 @@
 
                     </div>
                     <div class="row" >
-                        <div class="col-3 border-bottom  border-primary" >
+                        <div class="col-md-3 border-bottom  border-primary" >
                             <h5 class="text-primary " >Description</h5>
                         </div>
-                        <div class="col-3 border-bottom " >
+                        <div class="col-md-3 border-bottom " >
                              <h5 >Reviews(1)</h5>
                         </div>
-                        <div class="col-6 border-bottom " >
+                        <div class="col-md-6 border-bottom " >
                            
                        </div>
                     </div>
@@ -294,12 +294,12 @@
     <div class="container-fluid mt-5 border border-top-0 ">
         <div class="container pt-4 pb-4 mb-5">
             <div class="row">
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="row">
-                        <div class="col-2 text-center">
+                        <div class="col-md-2 text-center">
                             <i class="fa fa-shopping-cart text-primary fa-3x" aria-hidden="true"></i>
                         </div>
-                        <div class="col-10">
+                        <div class="col-md-10">
                             <span class="px-3"><b>Free shipping</b></span><br>
                             <span class="px-3">for purchases over $50</span>
                         </div>
@@ -307,23 +307,23 @@
 
 
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="row">
-                        <div class="col-2 text-center">
+                        <div class="col-md-2 text-center">
                             <i class="fa fa-shield text-primary fa-3x" aria-hidden="true"></i>
                         </div>
-                        <div class="col-10">
+                        <div class="col-md-10">
                             <span class="px-3"><b>Secure payment</b></span><br>
                             <span class="px-3">for online transactions</span>
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="row">
-                        <div class="col-2 text-center">
+                        <div class="col-md-2 text-center">
                             <i class="fa fa-flash text-primary fa-3x" aria-hidden="true"></i>
                         </div>
-                        <div class="col-10">
+                        <div class="col-md-10">
                             <span class="px-3"><b>Same day shipping</b></span><br>
                             <span class="px-3">for purchases till 6:00 pm EST</span>
                         </div>
@@ -338,8 +338,8 @@
             <div class="container border-bottom pb-5 ">
                 <h2 class="text-light">JEVELIN</h2>
 
-                <!-- Collapsible wrapper -->
-                <div class="collapse navbar-collapse" id="navbarRightAlignExample">
+                <!-- Col-mdlapsible wrapper -->
+                <div class="navbar-collapse id="navbarRightAlignExample">
                     <!-- Left links -->
                     <ul class="navbar-nav ms-auto pl-5 mb-3 mb-lg-0">
                         <!-- Navbar dropdown -->
@@ -367,7 +367,7 @@
         </nav>
         <div class="container text-white">
             <div class="row mt-5 ">
-                <div class="col-3">
+                <div class="col-md-3">
                     <h4> Start Crafting</h4>
                     <h4>Epic <b>Websites</b></h4>
                     <h4>Today!</h4>
@@ -377,18 +377,18 @@
                     <p class="mt-3 style="font-size:smaller;><small>©2021 Jevelin. Crafted by Shufflehound</small></p>
                 </div>
 
-                <div class="col-2">
+                <div class="col-md-2">
                     <small><b>Useful</b></small><br><br>
                     <small style="font-size:smaller;">Documentation intro video Showcase</small>
                     <small>Buy theme</small>
                 </div>
-                <div class="col-3">
+                <div class="col-md-3">
                     <small><b>Keep in touch</b></small><br><br>
                     <small>Nippon, Osaka, Crimson street 78-42
                         010am-6pm EST, Mon-Fri</small>
                     <small><b>Support@brand.com</b></small>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="container ">
                         <small><b>Sign up for newsletter</b></small><br><br>
                         <div class="form-group d-flex mt-2">
@@ -399,10 +399,10 @@
                         </div>
                         <small class="text-gray" style="font-size:smaller;">*information is not disclosed to third parties</small><br>
                         <div class="row mt-5">
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <small><b style="font-size:small;" >Privacy policy</b></small>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <small><b style="font-size:small;">Terms & conditions</b></small>
                             </div>
 
